Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57174

SCXML compiler does not generate publicly accessible methods for signals (=> Invalid Q_PROPERTY declaration)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 1
    • 5.8.0 Alpha
    • XML: SCXML
    • None
    • c99c561ee94076c84ddfdf1643a4e50f0a8ce173

    Description

      Example header generated:

      //
      // Statemachine code from reading SCXML file 'test153.txml.scxml'
      // Created by: The Qt SCXML Compiler version 1 (Qt 5.9.0)
      // WARNING! All changes made in this file will be lost!
      //
      
      #ifndef W3C_ECMA_TEST153_TXML_H
      #define W3C_ECMA_TEST153_TXML_H
      
      #include <QScxmlStateMachine>
      #include <QString>
      #include <QVariant>
      
      namespace w3c_ecma {
      
      class test153: public QScxmlStateMachine
      {
      public:
          /* qmake ignore Q_OBJECT */
          Q_OBJECT
          Q_PROPERTY(bool s0 NOTIFY s0Changed)
          Q_PROPERTY(bool pass NOTIFY passChanged)
          Q_PROPERTY(bool fail NOTIFY failChanged)
      
      
      public:
          test153(QObject *parent = 0); 
          ~test153();
      
      private:
          struct Data;
          friend struct Data;
          struct Data *data;
      };
      
      } // w3c_ecma namespace.
      
      Q_DECLARE_METATYPE(::w3c_ecma::test153*)
      
      #endif // W3C_ECMA_TEST153_TXML_H
      

      Actual:

      Q_PROPERTY(bool s0 NOTIFY s0Changed)
      
      // no method for signal in header
      

      Expected:

      Q_PROPERTY(bool s0 NOTIFY s0Changed)
      // ...
      Q_SIGNALS:
      void s0Changed();
      

      Attachments

        For Gerrit Dashboard: QTBUG-57174
        # Subject Branch Project Status CR V

        Activity

          People

            krf Kevin Funk
            krf Kevin Funk
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes