Drop the NOTIFY part from generated Q_PROPERTY macros

They are unnecessary for code completion and somewhat wrong because
the signal methods don't actually exist.

Change-Id: Ie5326791aaf574fffc9f38b3c6bc786c1204ab45
Task-number: QTBUG-57174
Reviewed-by: Kevin Funk <kevin.funk@kdab.com>
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>